# binanceQ

./: .gitignore  Cargo.toml  build.rs
binanceServ/: package.json
binanceServ/routes/: index.js
events/: Cargo.toml
events/src/: lib.rs
events/tests/: test_events.rs
executors/: Cargo.toml
executors/src/: back_tester.rs  lib.rs  live.rs  notification.rs  simulated.rs
executors/tests/: test_position.rs  test_simulated_account.rs
managers/: Cargo.toml  build.rs
managers/proto/: signals.proto
managers/src/: lib.rs  risk_manager.rs  strategy_manager.rs
mongodb/: Cargo.toml
mongodb/src/: client.rs  lib.rs  loader.rs
python/: plot.py  visualize_trades.py
python/signals/: cpd.py  qpl.py  signal_generator.py  signals_pb2.py  signals_pb2.pyi  signals_pb2_grpc.py
src/: back_tester.rs  backtester.rs  bracket_order.rs  cmds.rs  emitter.rs  errors.rs  events.rs  helpers.rs  loader.rs  main.rs  market_classifier.rs  types.rs
src/db/: client.rs  loader.rs  mod.rs
src/events/: event_emitter.rs  event_sink.rs  mod.rs
src/executors/: binance_live.rs  live.rs  mod.rs  notification.rs  order_state_machine.rs  order_state_machine_candle.rs  position.rs  simulated.rs  simulated_candle.rs  spread.rs
src/managers/: mod.rs  money_manager.rs  risk_manager.rs  strategy_manager.rs  strategy_manager_python.rs
src/managers/proto/: signals.proto
src/mongodb/: client.rs  loader.rs  mod.rs  models.rs
src/strategies/: chop_directional.rs  consolidation_accumulator.rs  mod.rs  random_strategy.rs  rsi_basic.rs
src/studies/: atr_study.rs  choppiness_study.rs  directional_index_study.rs  mod.rs  ob_study.rs  oi_study.rs  vol_study.rs
src/types/: mod.rs
src/utils/: cmds.rs  helpers.rs  mod.rs
strategies/: Cargo.toml
strategies/proto/: cpd.proto
strategies/src/: chop_directional.rs  lib.rs  random_strategy.rs
studies/: Cargo.toml
studies/src/: atr_study.rs  choppiness_study.rs  directional_index_study.rs  lib.rs
tests/: test_simulated_executor.rs
tests/util/: build.rs
types/: Cargo.toml
types/src/: lib.rs
util/: Cargo.toml
util/src/: errors.rs  helpers.rs  market_classifier.rs
