[package]
name = "binance_q"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
binance = { path = "../opensource/binance-rs" }
clap = {version = "4.0.29", features = ["cargo"]}
rust_decimal = "1.27.0"
flurry = "0.4.0"
serde = "1.0.141"
anyhow = "1.0.66"
serde_with = "2.0.1"
env_logger = "0.9.0"
tokio = {version = "1.22.0", features = ["rt-multi-thread"]}
futures = "0.3.25"
async-std = "1.12.0"
once_cell = "1.16.0"
async-trait = "0.1.58"
error-chain = "0.12.4"
ndarray = "0.15.6"
yata = {version = "0.6.1", features = ["serde"] }
dyn-clone = "1.0.9"
image = "0.24.5"
kanal = "0.1.0-pre7"
rand = "0.8.5"
async-broadcast = "0.4.1"
mongodb = {version = "2.1.0", default-features = false, features = ["tokio-runtime"]}
binance_q_types = { path = "./types"}
binance_q_events = { path = "./events"}
binance_q_mongodb = { path = "./mongodb"}
binance_q_strategies = { path = "./strategies"}
binance_q_managers = { path = "./managers"}
binance_q_executors = { path = "./executors"}