[package]
name = "binance_q_events"
version = "0.1.0"
edition = "2021"

[lib]
name = "binance_q_events"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.22.0", features = ["full", "macros"] }
async-std = "1.12.0"
kanal = "0.1.0-pre7"
async-trait = "0.1.59"
anyhow = "1.0.66"
async-broadcast = "0.4.1"
