[package]
name = "binance_q_executors"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = "1.23.0"
kanal = "0.1.0-pre7"
anyhow = "1.0.66"
async-std = "1.12.0"
async-trait = "0.1.59"
rust_decimal = "1.27.0"
binance = { git = "https://github.com/Y0h4n3s/binance-async-rs" }
headless_chrome = "0.9.0"
once_cell = "1.16.0"
uuid = "1.2.2"
binance_q_types = { path = "../types" }
teloxide = "0.11.3"
async-broadcast = "0.4.1"
futures = "0.3.25"
binance_q_events = { path = "../events" }
binance_q_mongodb = { path = "../mongodb" }
mongodb = {version = "2.1.0", default-features = false, features = ["tokio-runtime"]}
