[package]
name = "binance_q_mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.23.0"
mongodb = {version = "2.1.0", default-features = false, features = ["tokio-runtime"]}
kanal = "0.1.0-pre7"
binance = { git = "https://github.com/Y0h4n3s/binance-async-rs" }
binance_q_types = { path = "../types" }