[package]
name = "binance_q_mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.23.0"
mongodb = {version = "2.1.0", default-features = false, features = ["tokio-runtime"]}
async-broadcast = "0.4.1"
kanal = "0.1.0-pre7"
binance = { git = "https://github.com/Y0h4n3s/binance-async-rs" }
binance_q_types = { path = "../types" }
binance_q_events = { path = "../events" }
anyhow = "1.0.66"
async-trait = "0.1.59"
futures = "0.3.25"
async-std = "1.12.0"
chrono = "0.4.23"
reqwest = "0.11.13"
zip = "0.6.3"
csv = "1.1.6"
serde = "1.0.149"