[package]
name = "binance_q_studies"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = "1.23.0"
kanal = "0.1.0-pre7"
async-std = "1.12.0"
anyhow = "1.0.66"
futures = "0.3.25"
yata = "0.6.1"
async-trait = "0.1.59"
async-broadcast = "0.4.1"

binance_q_events = { path = "../events" }
binance_q_types = { path = "../types" }
binance_q_mongodb = { path = "../mongodb" }
binance_q_utils = { path = "../util" }
mongodb = {version = "2.1.0", default-features = false, features = ["tokio-runtime"]}

